@startuml

title __RESOURCE's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class DeveloperResource {
            + DeveloperResource()
            + getBreakTime()
            - setBreakTime()
            + addBreakTime()
            + isAvailable()
            - overlapsWithBreak()
            - setDeveloper()
            + getDeveloper()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class Plan {
            - requirements : Map<ResourceType, Integer>
            - reservations : List<Reservation>
            + Plan()
            + getTask()
            - setTask()
            + getRequirements()
            + addRequirement()
            + getReservations()
            + createReservations()
            + createReservation()
            + createSpecificReservation()
            + removeReservation()
            + getPlannedResources()
            + changeResource()
            + isDeveloperFromPlan()
            + finish()
            + emptyPlan()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class Reservation {
            - userSpecific : boolean
            + Reservation()
            + getResource()
            - setResource()
            + getTimeSpan()
            - setTimeSpan()
            + overlaps()
            + finishEarlier()
            + isUserSpecific()
            + setUserSpecific()
            + delete()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class Resource {
            - name : String
            - reservations : ArrayList<Reservation>
            + Resource()
            + getName()
            + getType()
            + setType()
            + getReservations()
            + addReservation()
            + deleteReservation()
            + isAvailable()
            + canRemove()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class ResourceManager {
            - resourceTypes : Set<ResourceType>
            - constraints : List<ConstraintComponent>
            + ResourceManager()
            + getResourceType()
            + getResourceTypes()
            + createResourceType()
            - getConstraint()
            - addConstraint()
            + createConstraint()
            + getStartingTimes()
            - isAvailableStartingTime()
            + testRequirements()
            - checkRequirements()
            + addRequirement()
            + createResourceForUser()
            + removeResourceForUser()
            + initializePlan()
            + reschedulePlan()
            + canBeRescheduled()
            + getAlternativeResources()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.resource {
        class ResourceType {
            - name : String
            - availability : HashMap<Integer, AvailabilityPeriod>
            - resources : ArrayList<Resource>
            + ResourceType()
            + getName()
            - setName()
            + hashCode()
            - getAvailability()
            + getAvailabilityPeriod()
            + getResources()
            + getNbOfResources()
            + hasResource()
            + getResource()
            - addResource()
            + createResource()
            + createResourceFromUser()
            + removeResource()
            + hasAvailableResources()
            + getAvailableResources()
            + addAvailability()
        }
      }
    }
  }
  

  DeveloperResource -up-|> Resource
  DeveloperResource o-- AvailabilityPeriod : breakTime
  DeveloperResource o-- Developer : developer
  Plan o-- Task : task
  Reservation o-- Resource : resource
  Reservation o-- TimeSpan : timeSpan
  Resource -up-|> ResourceWrapper
  Resource o-- ResourceType : type
  ResourceType -up-|> ResourceTypeWrapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
